--- a/eParty/Views/Home/Login.cshtml
+++ b/eParty/Views/Home/Login.cshtml
@@ -9,6 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Nhập</title>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="~/Content/login/particles.min.js"></script>
     <link rel="stylesheet" href="~/Content/login/style.css">
 </head>
 <body>
